# phone-variable-scroll

./: .gitignore  .gitmodules  README.md  phone-variable-scroll.pro  phone-variable-scroll.py  pyproject.toml  resource.qrc
src/: CONFIG.h  PhoneVariableScroll.cpp  PhoneVariableScroll.h  PhoneVariableScroll.ui  debug.h  main.cpp  resources.qrc
src/emulation/: xkeys.cpp  xkeys.h
src/emulation/definitions/: dik_defines.h  keysyms_defines.h
